chore : django-DRF기능 구현
기존의 MTV방식에서 DRF방식으로 변환 구현

--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -92,7 +93,6 @@
             border: 1px solid #ddd;
             border-radius: 5px;
             flex-direction: row;
-            width: 830px;
             margin: 5px 0;
             justify-content: space-between;
         }
@@ -185,238 +185,11 @@
             return null;
         }
     }
-
-    function speak(text, callback) {
-        const synth = window.speechSynthesis;
-        const utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = 'ko-KR';
-        utterance.onend = function () {
-            console.log("음성 안내가 끝났습니다.");
-            if (callback) {
-                callback();
-            }
-        };
-        synth.speak(utterance);
-    }
-
-    function startSpeechRecognition() {
-        if (!('webkitSpeechRecognition' in window)) {
-            alert("음성 인식이 지원되지 않는 브라우저입니다.");
-        } else {
-            const recognition = new webkitSpeechRecognition();
-            recognition.lang = 'ko-KR';
-            recognition.start();
-            recognition.onresult = function (event) {
-                const transcript = event.results[0][0].transcript;
-                transcription.textContent = transcript;
-                const csrfToken = getCsrfToken();
-                axios.post('{% url "orders:aibot" %}', {inputText: transcript}, {
-                    headers: {
-                        'X-CSRFToken': csrfToken
-                    }
-                })
-                    .then(function (response) {
-                        const responseText = response.data.responseText;
-                        const hashtags = response.data.hashtags;
-                        console.log('서버 응답:', responseText);
-                        updateMenus(hashtags); // 메뉴 업데이트 먼저 실행
-                        speak(responseText, startSpeechRecognition); // 그 다음에 음성 안내 실행
-                    })
-                    .catch(function (error) {
-                        console.error('에러:', error);
-                    });
-            };
-            recognition.onend = function () {
-                startButton.textContent = '음성 입력 다시 시작';
-            };
-        }
-    }
-
-    function updateMenus(hashtags, page = 1) {
-        $.ajax({
-            url: '/orders/get_menus/',
-            data: {hashtags: hashtags, page: page},
-            dataType: 'json',
-            success: function (data) {
-                const menus = data.menus;
-                const menuContainer = $('#menuContainer');
-                menuContainer.empty();
-                menus.forEach(menu => {
-                    const menuItem = `
-                        <div class="menu-item card" onclick="addItem('${menu.food_name}', ${menu.price}, '${menu.img_url}', this)">
-                            <img src="${menu.img_url}" alt="${menu.food_name}" class="card-img-top">
-                            <div class="card-body text-center">
-                                <h5 class="card-title text-primary">${menu.food_name}</h5>
-                                <p class="card-text text-muted">${menu.price}원</p>
-                            </div>
-                        </div>
-                    `;
-                    menuContainer.append(menuItem);
-                });
-                console.log(data.page_count)
-                updatePaginationButtons(data.page_count, page);
-            },
-            error: function (error) {
-                console.error('메뉴 업데이트 중 오류 발생:', error);
-            }
-        });
-    }
-
-    function updatePaginationButtons(totalPages, currentPage) {
-        const paginationButtons = $('#paginationButtons');
-        paginationButtons.empty();
-
-        for (let i = 1; i <= totalPages; i++) {
-            const button = `<button class="btn btn-outline-primary btn-page mr-1" onclick="changePage(${i})">${i}</button>`;
-            paginationButtons.append(button);
-        }
-    }
-
-    function changePage(pageNumber) {
-        const hashtags = "";
-        updateMenus(hashtags, pageNumber);
-    }
-
-    const selectedItems = {};
-
-    function addItem(name, price, imgUrl, element) {
-        if (!selectedItems[name]) {
-            selectedItems[name] = {price: price, count: 1, imgUrl: imgUrl};
-        } else {
-            selectedItems[name].count += 1;
-        }
-        updateSelectedItemsList();
-        flyToCart(element, document.getElementById('selectedItemsList'));
-    }
-
-    function updateSelectedItemsList() {
-        const selectedItemsList = document.getElementById('selectedItemsList');
-        selectedItemsList.innerHTML = '';
-        let totalPrice = 0;
-        for (const [name, item] of Object.entries(selectedItems)) {
-            const itemElement = document.createElement('div');
-            itemElement.classList.add('selected-item');
-            itemElement.innerHTML = `
-                <img src="${item.imgUrl}" alt="${name}">
-                <div>
-                <span>${name}</span>
-                <span>${item.price}원</span>
-                <span>${item.count}개</span>
-                </div>
-                <button class="btn btn-danger btn-lg" onclick="removeItem('${name}')">삭제</button>
-            `;
-            selectedItemsList.appendChild(itemElement);
-            totalPrice += item.price * item.count;
-        }
-        document.getElementById('totalPrice').textContent = `${totalPrice}원`;
-    }
-
-    function removeItem(name) {
-        if (selectedItems[name]) {
-            delete selectedItems[name];
-            updateSelectedItemsList();
-        }
-    }
-
-    function clearItems() {
-        for (const key in selectedItems) {
-            delete selectedItems[key];
-        }
-        updateSelectedItemsList();
-    }
-
-    function flyToCart(element, targetElement) {
-        const imgToDrag = element.querySelector("img");
-        if (imgToDrag) {
-            const imgClone = imgToDrag.cloneNode(true);
-            let rect = imgToDrag.getBoundingClientRect();
-            imgClone.style.position = 'absolute';
-            imgClone.style.top = rect.top + 'px';
-            imgClone.style.left = rect.left + 'px';
-            imgClone.style.width = '250px'; // 초기 이미지 크기
-            imgClone.style.height = '250px'; // 초기 이미지 크기
-            imgClone.classList.add('fly-to-cart');
-            document.body.appendChild(imgClone);
-
-            // 🛒 아이콘 위치 설정
-            const cartIconRect = targetElement.getBoundingClientRect();
-
-            // 카트 아이콘 중앙 위치 계산
-            const cartCenterX = cartIconRect.left + cartIconRect.width / 2;
-            const cartCenterY = cartIconRect.top + cartIconRect.height / 2;
-
-            // 이미지 이동 속도 계산
-            const dx = (cartCenterX - rect.left) / 120; // x 방향 이동 속도
-            const dy = (cartCenterY - rect.top) / 120; // y 방향 이동 속도
-
-            // 이미지 크기 감소 속도 계산
-            const dw = (250 - 100) / 120; // 이미지 크기 감소 속도
-
-            // 이미지 이동 및 크기 조절 함수
-            function moveImage() {
-                rect = imgClone.getBoundingClientRect();
-                if ((dx > 0 && rect.left < cartCenterX) || (dx < 0 && rect.left > cartCenterX) ||
-                    (dy > 0 && rect.top < cartCenterY) || (dy < 0 && rect.top > cartCenterY)) {
-                    imgClone.style.left = (rect.left + dx) + 'px';
-                    imgClone.style.top = (rect.top + dy) + 'px';
-
-                    // 이미지 크기 조절
-                    const newWidth = parseFloat(imgClone.style.width) - dw;
-                    imgClone.style.width = newWidth + 'px';
-                    imgClone.style.height = newWidth + 'px';
-
-                    requestAnimationFrame(moveImage);
-                } else {
-                    imgClone.remove();
-                }
-            }
-
-            // 이미지 이동 시작
-            moveImage();
-        }
-    }
-
-    function scrollSelectedItemsList(amount) {
-        const selectedItemsList = document.getElementById('selectedItemsList');
-        selectedItemsList.scrollBy({top: amount, behavior: 'smooth'});
-    }
-
-    document.getElementById('submitOrderBtn').addEventListener('click', function () {
-        const selectedItemsArray = Object.entries(selectedItems).map(([name, item]) => {
-            return {name: name, count: item.count};
-        });
-
-        const totalPrice = calculateTotalPrice(selectedItems);
-
-        $.ajax({
-            url: '/orders/submit_order/',
-            cache: false,
-            dataType: 'json',
-            type: 'POST',
-            contentType: 'application/json',
-            data: JSON.stringify({items: selectedItemsArray, total_price: totalPrice}),
-            beforeSend: function (xhr) {
-                xhr.setRequestHeader('X-CSRFToken', $.cookie('csrftoken'));
-            },
-            success: function (data) {
-                console.log('주문이 성공적으로 처리되었습니다.');
-                window.location.href = '/orders/order_complete/' + data.order_number + '/';
-            },
-            error: function (error) {
-                console.error('주문 처리 중 오류가 발생했습니다:', error);
-            }
-        });
-    });
-
-    function calculateTotalPrice(selectedItems) {
-        let totalPrice = 0;
-        for (const item of Object.values(selectedItems)) {
-            totalPrice += item.price * item.count;
-        }
-        return totalPrice;
-    }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="{% static 'js/selecteditems.js' %}"></script>
+<script src="{% static 'js/speechrecognition.js' %}"></script>
+<script src="{% static 'js/updatemenus.js' %}"></script>
 </body>
 </html>
