--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -1,428 +1,172 @@
 <!DOCTYPE html>
+
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silver Lining</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <title>주문하기</title>
     <style>
-        /* 기존 스타일 */
         body {
-            font-size: 2rem;
-        }
-
-        .h2, h2 {
-            font-size: 4rem;
-            background-color: #ef4040;
-            color: #f8f9fa;
-            padding: 20px;
-        }
-
-        .h3, h3 {
-            font-size: 2.75rem;
-            margin: 20px;
-        }
-
-        .h5, h5 {
-            font-size: 1.5rem;
-        }
-
-        .menu-item {
+            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 10px;
-            margin: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            flex-direction: column;
-            transition: transform 0.2s;
-            width: 280px;
+            height: 100vh;
+            background-color: #D3C4FF;
+            margin: 0;
         }
 
-        .menu-item img {
-            width: 250px;
-            height: 250px;
-        }
-
-        .menu-item:hover {
-            transform: scale(1.05);
-        }
-
-        .selected-item span {
-            margin: 0 5px;
-        }
-
-        .actions button {
-            margin: 5px;
-        }
-
-        .card-body {
+        .container {
             text-align: center;
+            padding: 20px;
+            background-color: #E6E6FA; /* Lavender */
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        .fly-to-cart {
-            position: absolute;
-            z-index: 1000;
-            transition: transform 1s ease-in-out;
+        h1 {
+            font-size: 2rem;
+            color: #333;
         }
 
-        #selectedItemsList {
-            height: 350px;
-            overflow-y: auto;
-            flex-grow: 1;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        .scroll-button {
-            margin: 5px 0;
-            height: 155px;
-            width: 50px;
+        .processing {
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-top: 20px;
         }
 
-        .selected-item {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            flex-direction: row;
-            width: 830px;
-            margin: 5px 0;
-            justify-content: space-between;
+        .dot {
+            height: 20px;
+            width: 20px;
+            margin: 0 5px;
+            background-color: #99FF99;
+            border-radius: 50%;
+            display: inline-block;
+            animation: bounce 1.5s infinite;
         }
 
-        .btn-custom {
-            padding: 30px 95px;
-            font-size: 3.5rem;
+        .dot:nth-child(1) {
+            animation-delay: 0s;
         }
 
-        .btn-page {
-            padding: .375rem 1.75rem;
-            font-size: 3rem;
+        .dot:nth-child(2) {
+            animation-delay: 0.3s;
         }
 
-        .scroll-button {
-            margin: 10px 0;
-            padding: 10px 20px;
-            font-size: 1.5rem;
+        .dot:nth-child(3) {
+            animation-delay: 0.6s;
         }
 
-        .selected-item img {
-            width: 50px;
-            height: 50px;
-            margin-right: 10px;
-        }
-
-        .menu {
-            height: 850px;
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-15px);
+            }
         }
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
+
 <body>
-<h2 class="text-center mb-4">Silver Lining</h2>
-<div class="container mt-5">
-    <form id="speechForm">
-        {% csrf_token %}
-    </form>
-    <p id="transcription"></p>
-
-    <!-- 메뉴를 표시할 컨테이너 -->
-    <div class="menu">
-        <div class="button d-flex flex-wrap justify-content-center" id="menuContainer">
+    <div class="container">
+        <h1>안녕하세요, 어떤 메뉴로 주문하시겠습니까?</h1>
+        <div class="processing">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
         </div>
-    </div>
-
-    <div class="pagination justify-content-center" id="paginationButtons">
-    </div>
-    <h3 class="text-center">선택한 상품 🛒</h3>
-    <div class="selected-items mt-4 d-flex">
-        <div id="selectedItemsList" class="flex-grow-1"></div>
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <button class="btn btn-primary scroll-button mb-2" onclick="scrollSelectedItemsList(-100)">
-                <i class="fas fa-arrow-up"></i>
-            </button>
-            <button class="btn btn-primary scroll-button" onclick="scrollSelectedItemsList(100)">
-                <i class="fas fa-arrow-down"></i>
-            </button>
+        <div>
+            <form id="speechForm">
+                {% csrf_token %}
+            </form>
+            <p id="transcription"></p>
         </div>
+        <p>음성 인식 중 ....</p>
     </div>
-    <div class="total-price mt-3">
-        <h3 class="text-center">총 금액: <span id="totalPrice">0원</span></h3>
-    </div>
-    <div class="actions text-center">
-        <button class="btn btn-danger btn-custom" onclick="clearItems()">전체삭제</button>
-        <button class="btn btn-success btn-custom" id="submitOrderBtn">결제하기</button>
-    </div>
-</div>
 
-<script>
-    window.addEventListener('load', function () {
-        const hashtags = "";
-        updateMenus(hashtags)
-        const welcomeMessage = "반갑습니다. 원하시는 메뉴를 추천해 드리겠습니다. 필요한 것이 있다면 말씀해주세요.";
-        {#시끄러워서 주석처리#}
-        {#speak(welcomeMessage, startSpeechRecognition);#}
-    });
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    const startButton = document.getElementById('startButton');
-    const transcription = document.getElementById('transcription');
+    <script>
+        // window.addEventListener('load', function () {
+        //     console.log(">>>>>>>>>>>>> 실행 <<<<<<<<<<<")
+        //     const welcomeMessage = "반갑습니다. 원하시는 메뉴를 추천해 드리겠습니다. 필요한 것이 있다면 말씀해주세요.";
+        //     speak(welcomeMessage, startSpeechRecognition);
+        // });
 
-    function getCsrfToken() {
-        const csrfTokenElement = document.querySelector('input[name="csrfmiddlewaretoken"]');
-        if (csrfTokenElement) {
-            return csrfTokenElement.value;
-        } else {
-            console.error('CSRF 토큰을 찾을 수 없습니다.');
-            return null;
-        }
-    }
+        // const startButton = document.getElementById('startButton');
+        // const transcription = document.getElementById('transcription');
 
-    function speak(text, callback) {
-        const synth = window.speechSynthesis;
-        const utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = 'ko-KR';
-        utterance.onend = function () {
-            console.log("음성 안내가 끝났습니다.");
-            if (callback) {
-                callback();
-            }
-        };
-        synth.speak(utterance);
-    }
+        // function getCsrfToken() {
+        //     const csrfTokenElement = document.querySelector('input[name="csrfmiddlewaretoken"]');
+        //     return csrfTokenElement ? csrfTokenElement.value : null;
+        // }
 
-    function startSpeechRecognition() {
-        if (!('webkitSpeechRecognition' in window)) {
-            alert("음성 인식이 지원되지 않는 브라우저입니다.");
-        } else {
-            const recognition = new webkitSpeechRecognition();
-            recognition.lang = 'ko-KR';
-            recognition.start();
-            recognition.onresult = function (event) {
-                const transcript = event.results[0][0].transcript;
-                transcription.textContent = transcript;
-                const csrfToken = getCsrfToken();
-                axios.post('{% url "orders:aibot" %}', {inputText: transcript}, {
-                    headers: {
-                        'X-CSRFToken': csrfToken
-                    }
-                })
-                    .then(function (response) {
-                        const responseText = response.data.responseText;
-                        const hashtags = response.data.hashtags;
-                        console.log('서버 응답:', responseText);
-                        updateMenus(hashtags); // 메뉴 업데이트 먼저 실행
-                        speak(responseText, startSpeechRecognition); // 그 다음에 음성 안내 실행
-                    })
-                    .catch(function (error) {
-                        console.error('에러:', error);
-                    });
-            };
-            recognition.onend = function () {
-                startButton.textContent = '음성 입력 다시 시작';
-            };
-        }
-    }
-
-    function updateMenus(hashtags, page = 1) {
-        $.ajax({
-            url: '/orders/get_menus/',
-            data: {hashtags: hashtags, page: page},
-            dataType: 'json',
-            success: function (data) {
-                const menus = data.menus;
-                const menuContainer = $('#menuContainer');
-                menuContainer.empty();
-                menus.forEach(menu => {
-                    const menuItem = `
-                        <div class="menu-item card" onclick="addItem('${menu.food_name}', ${menu.price}, '${menu.img_url}', this)">
-                            <img src="${menu.img_url}" alt="${menu.food_name}" class="card-img-top">
-                            <div class="card-body text-center">
-                                <h5 class="card-title text-primary">${menu.food_name}</h5>
-                                <p class="card-text text-muted">${menu.price}원</p>
-                            </div>
-                        </div>
-                    `;
-                    menuContainer.append(menuItem);
-                });
-                console.log(data.page_count)
-                updatePaginationButtons(data.page_count, page);
-            },
-            error: function (error) {
-                console.error('메뉴 업데이트 중 오류 발생:', error);
-            }
-        });
-    }
-
-    function updatePaginationButtons(totalPages, currentPage) {
-        const paginationButtons = $('#paginationButtons');
-        paginationButtons.empty();
-
-        for (let i = 1; i <= totalPages; i++) {
-            const button = `<button class="btn btn-outline-primary btn-page mr-1" onclick="changePage(${i})">${i}</button>`;
-            paginationButtons.append(button);
-        }
-    }
-
-    function changePage(pageNumber) {
-        const hashtags = "";
-        updateMenus(hashtags, pageNumber);
-    }
-
-    const selectedItems = {};
-
-    function addItem(name, price, imgUrl, element) {
-        if (!selectedItems[name]) {
-            selectedItems[name] = {price: price, count: 1, imgUrl: imgUrl};
-        } else {
-            selectedItems[name].count += 1;
-        }
-        updateSelectedItemsList();
-        flyToCart(element, document.getElementById('selectedItemsList'));
-    }
-
-    function updateSelectedItemsList() {
-        const selectedItemsList = document.getElementById('selectedItemsList');
-        selectedItemsList.innerHTML = '';
-        let totalPrice = 0;
-        for (const [name, item] of Object.entries(selectedItems)) {
-            const itemElement = document.createElement('div');
-            itemElement.classList.add('selected-item');
-            itemElement.innerHTML = `
-                <img src="${item.imgUrl}" alt="${name}">
-                <div>
-                <span>${name}</span>
-                <span>${item.price}원</span>
-                <span>${item.count}개</span>
-                </div>
-                <button class="btn btn-danger btn-lg" onclick="removeItem('${name}')">삭제</button>
-            `;
-            selectedItemsList.appendChild(itemElement);
-            totalPrice += item.price * item.count;
-        }
-        document.getElementById('totalPrice').textContent = `${totalPrice}원`;
-    }
-
-    function removeItem(name) {
-        if (selectedItems[name]) {
-            delete selectedItems[name];
-            updateSelectedItemsList();
-        }
-    }
-
-    function clearItems() {
-        for (const key in selectedItems) {
-            delete selectedItems[key];
-        }
-        updateSelectedItemsList();
-    }
-
-    function flyToCart(element, targetElement) {
-        const imgToDrag = element.querySelector("img");
-        if (imgToDrag) {
-            const imgClone = imgToDrag.cloneNode(true);
-            let rect = imgToDrag.getBoundingClientRect();
-            imgClone.style.position = 'absolute';
-            imgClone.style.top = rect.top + 'px';
-            imgClone.style.left = rect.left + 'px';
-            imgClone.style.width = '250px'; // 초기 이미지 크기
-            imgClone.style.height = '250px'; // 초기 이미지 크기
-            imgClone.classList.add('fly-to-cart');
-            document.body.appendChild(imgClone);
-
-            // 🛒 아이콘 위치 설정
-            const cartIconRect = targetElement.getBoundingClientRect();
-
-            // 카트 아이콘 중앙 위치 계산
-            const cartCenterX = cartIconRect.left + cartIconRect.width / 2;
-            const cartCenterY = cartIconRect.top + cartIconRect.height / 2;
-
-            // 이미지 이동 속도 계산
-            const dx = (cartCenterX - rect.left) / 120; // x 방향 이동 속도
-            const dy = (cartCenterY - rect.top) / 120; // y 방향 이동 속도
-
-            // 이미지 크기 감소 속도 계산
-            const dw = (250 - 100) / 120; // 이미지 크기 감소 속도
-
-            // 이미지 이동 및 크기 조절 함수
-            function moveImage() {
-                rect = imgClone.getBoundingClientRect();
-                if ((dx > 0 && rect.left < cartCenterX) || (dx < 0 && rect.left > cartCenterX) ||
-                    (dy > 0 && rect.top < cartCenterY) || (dy < 0 && rect.top > cartCenterY)) {
-                    imgClone.style.left = (rect.left + dx) + 'px';
-                    imgClone.style.top = (rect.top + dy) + 'px';
-
-                    // 이미지 크기 조절
-                    const newWidth = parseFloat(imgClone.style.width) - dw;
-                    imgClone.style.width = newWidth + 'px';
-                    imgClone.style.height = newWidth + 'px';
-
-                    requestAnimationFrame(moveImage);
-                } else {
-                    imgClone.remove();
-                }
-            }
-
-            // 이미지 이동 시작
-            moveImage();
-        }
-
-        // 이미지 이동 시작
-        moveImage();
-    }
-}
+        // function speak(text, callback) {
+        //     console.log(">>>>>>>>> speak 실행 <<<<<<<<<<<<<")
+        //     const synth = window.speechSynthesis;
+        //     const utterance = new SpeechSynthesisUtterance(text);
+        //     console.log(">>>>>>>>>> utterance", utterance)
+        //     utterance.lang = 'ko-KR';
+        //     utterance.onend = function () {
+        //         if (callback) {
+        //             callback();
+        //         }
+        //     };
+        //     synth.speak(utterance);
+        //     console.log(">>>>>>>> speak 끝 <<<<<<<<<<<")
+        // }
 
 
 
-    function scrollSelectedItemsList(amount) {
-        const selectedItemsList = document.getElementById('selectedItemsList');
-        selectedItemsList.scrollBy({top: amount, behavior: 'smooth'});
-    }
+//         function startSpeechRecognition() {
+//             console.log(">>>>>>>>>>>>> startSpeechRecognition <<<<<<<<<")
+//             if (!('webkitSpeechRecognition' in window)) {
+//                 alert("음성 인식이 지원되지 않는 브라우저입니다.");
+//                 console.log(">>>>>>>>>>>>>>>> if 탔는지 <<<<<<<<<<<<<<")
+//             } else {
+//                 console.log(">>>>>>>>>> else 탔는지 <<<<<<<<<<<")
+//                 const recognition = new webkitSpeechRecognition();
+//                 console.log(">>>>>>>> recognition 탔는지 <<<<<<<<<")
+//                 recognition.lang = 'ko-KR';
+//                 recognition.start();
+//                 console.log(">>>>>>>>>> start() 탔는지 <<<<<<<<<<<")
+//                 recognition.onresult = function (event) {
+//                     const transcript = event.results[0][0].transcript;
+//                     console.log(transcript);
+//                     const csrfToken = getCsrfToken();
 
-    document.getElementById('submitOrderBtn').addEventListener('click', function () {
-        const selectedItemsArray = Object.entries(selectedItems).map(([name, item]) => {
-            return {name: name, count: item.count};
-        });
+//                     axios.post('/orders/aibot/', {inputText: transcript},
+//                     {
+//                         headers: {
+//                             'X-CSRFToken': csrfToken
+//                         }
+//                     })
+//                     .then(function (response) {
+//                         const responseText = response.data.responseText;
+//                         const hashtags = response.data.hashtags;
+//                         console.log('서버 응답:', responseText);
+//                         localStorage.setItem('filteredHashtags', hashtags);
+//                         localStorage.setItem('responseText', responseText);
+//                         window.location.href = '/orders/elder_menu/';
+//                     })
+//                     .catch(function (error) {
+//                         console.error('에러:', error);
+//                     });
+//                 };
+//                 recognition.onend = function () {
+//                     document.getElementById('startButton').textContent = '음성 입력 다시 시작';
+//                 };
+//             }
+//         }
 
-        const totalPrice = calculateTotalPrice(selectedItems);
+//         window.onload = function() {
+//             speak("안녕하세요, 어떤 메뉴를 주문하시겠습니까?", startSpeechRecognition);
+//         };
+//     </script>
+// </body>
 
-        $.ajax({
-            url: '/orders/submit_order/',
-            cache: false,
-            dataType: 'json',
-            type: 'POST',
-            contentType: 'application/json',
-            data: JSON.stringify({items: selectedItemsArray, total_price: totalPrice}),
-            beforeSend: function (xhr) {
-                xhr.setRequestHeader('X-CSRFToken', $.cookie('csrftoken'));
-            },
-            success: function (data) {
-                console.log('주문이 성공적으로 처리되었습니다.');
-                window.location.href = '/orders/order_complete/' + data.order_number + '/';
-            },
-            error: function (error) {
-                console.error('주문 처리 중 오류가 발생했습니다:', error);
-            }
-        });
-    });
-
-    function calculateTotalPrice(selectedItems) {
-        let totalPrice = 0;
-        for (const item of Object.values(selectedItems)) {
-            totalPrice += item.price * item.count;
-        }
-        return totalPrice;
-    }
-</script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+// </html>
