feat: elder_menu.html의 팝업에 닫기버튼 추가
장바구니 기능이 완전히 구현되지 않은 상태라 팝업창을 닫을 수 있는 버튼이
필요하다고 판단되어 js로 팝업이 닫히게 수정

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -180,7 +180,7 @@
             const popupImage = document.getElementById('popup-image');
             const popupName = document.getElementById('popup-name');
             const popupPrice = document.getElementById('popup-price');
-            const closePopup = document.getElementById('closePopup');
+            // const closePopup = document.getElementById('closePopup');
 
             // Function to update the menu based on hashtags
             axios.get('/orders/get_menus/', { params: { hashtags: filteredHashtags } })
@@ -213,6 +213,9 @@
                 .catch(error => {
                     console.error('메뉴 업데이트 중 오류 발생:', error);
                 });
+                closePopup.addEventListener("click", function() {
+    popupOverlay.style.display = "none"; // Hide the popup
+});
             
             if (responseText) {
                 speak(responseText);
@@ -238,9 +241,7 @@
             totalPrice.textContent = `총 가격: ₩${currentTotal}`;
         }
 
-        closePopup.addEventListener("click", function() {
-    popupOverlay.style.display = "none"; // Hide the popup
-});
+
     </script>
 </body>
 
